--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-roboto: var(--font-geist-roboto);
 }
 
 body {
